<resources>
    <string name="app_name">DronesNCars</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="import_kml">Import KML</string>
    <string name="polygon_select">Polygon Select</string>
    <string name="todo_this_still_is_a_mock">TODO: This still is a mock</string>
    <string name="drone_settings_header">Drone Settings</string>
    <string name="height_descriptor">Height: </string>
    <string name="compute_flight_route">compute flight route &amp; save settings</string>
    <string name="start_flight">Start Flight</string>
    <string name="map">Map</string>
    <string name="scan_results">Scan Results</string>
    <string name="configure_rovers">Configure Rovers</string>
    <string name="rover_routine">Rover Routine</string>
    <string name="number_of_rovers">Number of selected Rovers: 0</string>
    <string name="num_of_rovers_hint_1">1</string>
    <string name="create">Create Rover Routine</string>
    <string name="rover_id">Rover ID: </string>
    <string name="rover_name">Rover Name: </string>
    <string name="rover_status">Rover Status</string>
    <string name="report_fragment_title">Report</string>
    <string name="assume_rovers_finished">assume rovers finished</string>
    <string name="report_mock_text">nothing to report :(</string>
    <string name="rover_routine_fragment_title">Rover Routine</string>
    <string name="settings">Settings</string>
    <string name="compute_routine_button">compute routine</string>
    <string name="accept_rover_routine_button">Accept Routine</string>
    <string name="status">Status:</string>
    <string name="progress">Progress:</string>
    <string name="_0_percent_progress_default">0%</string>
    <string name="finish_polygon">Finish Polygon</string>
    <string name="add_marker">add marker</string>
    <string name="delete_marker">delete marker</string>
    <string name="export_polygon_to_kml">export Polygon to KML</string>
    <string name="description_stitched_image_viewer">Displays the stitched image</string>
    <string name="description_scan_results_viewer">Displays the scan results of the stitched image</string>
    <string name="label_number_of_results">Number of results:</string>
    <string name="scan_result_id_label">Scan Result ID:</string>
    <string name="scan_result_class_label">Class:</string>
    <string name="scan_result_certainty_label">Certainty:</string>
    <string name="content_result_certainty">%1$d%%</string>
    <string name="button_multi_files">Multi Files</string>
    <string name="button_open_gallery_label">Open Gallery</string>
    <string name="button_mock_results_label">Mock Results</string>
    <string name="ip_url_label">IP/URL:</string>
    <string name="button_test_connection_label">Test Connection</string>
    <string name="connection_test_result_default">No Result</string>
    <string name="delete_rover_button_contentDescription">delete_icon</string>
    <string name="button_add_rover_label">Add Rover</string>
    <string name="button_edit_rovers_configure_label">Edit</string>
    <string name="alert_dialog_rover_name_placeholder">Name: %1$s</string>
    <string name="alert_dialog_rover_name">Name:</string>
    <string name="alert_dialog_rover_inet_address_placeholder">IP: %1$s</string>
    <string name="alert_dialog_rover_inet_address">IP:</string>
    <string name="cancel_string">Cancel</string>
    <string name="startscreen_drawer_title">StartScreen</string>
    <string name="dronescreen_drawer_title">DroneScreen</string>
    <string name="scanresultsscreen_drawer_title">ScanResultsScreen</string>
    <string name="roverconfigurationscreen_drawer_title">RoverConfigurationScreen</string>
    <string name="roverstatusscreen_drawer_title">RoverStatusScreen</string>
    <string name="reportscreen_drawer_title">ReportScreen</string>
    <string name="button_delete_polygon_label">delete polygon</string>
    <string name="number_of_connected_rovers">Number of connected Rovers: 0/0</string>
</resources>