<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RoverRoutineSettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/rover_routine_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAppearance="@style/fragment_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rover_routine_settings_title">

            <TextView
                android:id="@+id/num_of_rovers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number_of_rovers"
                android:textAppearance="@style/input_label"
                android:labelFor="@+id/num_of_rovers_input"/>

            <TextView
                android:id="@+id/num_of_rovers_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_of_rovers_input_default"
                android:ems="10"
                />

        </LinearLayout>

        <Button
            android:id="@+id/compute_routine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compute_routine_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/button_add_rover"
            app:layout_constraintHorizontal_chainStyle="spread"/>

        <Button
            android:id="@+id/accept_rover_routine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_rover_routine_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_edit_rovers_configure"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@+id/compute_routine_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rover_configuration_list"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accept_rover_routine_button"
            />

        <Button
            android:id="@+id/button_add_rover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_rover_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/compute_routine_button"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintHorizontal_chainStyle="spread"/>

        <Button
            android:id="@+id/button_edit_rovers_configure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_rovers_configure_label"
            app:layout_constraintEnd_toStartOf="@+id/accept_rover_routine_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compute_routine_button"
            app:layout_constraintHorizontal_chainStyle="spread"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>