<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alert_dialog_rover_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/alert_dialog_rover_name_content"
                android:text="@string/alert_dialog_rover_name" />

            <EditText
                    android:id="@+id/alert_dialog_rover_name_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alert_dialog_rover_inetaddress_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/alert_dialog_rover_inetaddress_content"
                android:text="@string/alert_dialog_rover_inet_address" />

            <EditText
                    android:id="@+id/alert_dialog_rover_inetaddress_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel_configure_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_string" />

            <Button
                android:id="@+id/button_finish_configure_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add_rover_label" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>